fix them overflows

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,20 @@
 body {
-    background-color: rgb(223, 223, 223);
-    min-height: 100vh;
-    padding: 0;
+    /* background-color: rgb(223, 223, 223);*/
+    /* min-height: 100vh; */
+    /* padding: 50px; */
+    margin: 0;
 }
 
 html, body {
-    height: 100%;
-    max-height: 100%;
+    /* height: 100%; */
+    /* max-height: 100%; */
 }
 
 #root {
-    max-height: 100%; 
-    min-height: 100%; 
-    display: flex;
+    /* max-height: 100%;  */
+    /* min-height: 100%;  */
+    /* display: flex; */
+    /* padding: 0; */
 }
 
 .undreline-link:hover {
